# w0_chemera

./: .gitignore  Dockerfile  README.md  README_SERVICES.md  docker-compose.yml  makefile  pyproject.toml  report.md
.github/: copilot-instructions.md
.github/workflows/: main.yml
apps/: __init__.py  orchestrator.py
apps/judge/: __init__.py  main.py  models.py
apps/orchestrator/: __init__.py  main.py
apps/planner/: __init__.py  goals.json  main.py  models.py
apps/worker/: __init__.py  main.py  models.py
governance/persona_profiles/persona_brand_professional/: soul.md
governance/persona_profiles/persona_fun_lighthearted/: soul.md
governance/persona_profiles/shared/: heartbeat.md
project_chimera.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
research/: architecture_strategy.md  tooling_strategy.md
skills/: skill_caption_generator.md  skill_metadata_saver.md  skill_trend_fetcher.md  skills.md
specs/: _meta.md  functional.md  technical.md
tests/: simple_test.py  test_pipeline_mongo.py  test_skills_interface.py  test_trend_fetcher.py
